# QR-Creator

./: CHANGELOG  COPYING  README.md  creator.py  requirements.txt  setup.cfg  setup.py
QRCreator/: creator.py
qr_creator/: __init__.py  __main__.py  core.py  logger.py
