[metadata]
name = QR-Creator
version = attr: qr_creator.core.__version__
url = https://github.com/TheOddZer0/QR-Creator

description = Generate QR codes easily, Customize them even easier
long_description = file: README.md
long_description_content_type = text/x-markdown

author = TheOddZer0

obsoletes = QRCreator

license = Apache Software License 2.0
license_file = COPYING



[options]
packages = qr_creator

[options.entry_points]
console_scripts =
	qr-creator = qr_creator:main

install_requires =
    qrcode >= 6.1 
